--- a/Main/src/styles/home.css
+++ b/Main/src/styles/home.css
@@ -155,6 +155,25 @@
 	justify-content: end;
 }
 
+.turnLog{
+	display: flex;
+	/* justify-content: space-between; */
+	align-items: center;
+	width: 29%;
+	height: 100%;
+	font-size: 1vw;
+	font-weight: bold;
+	color: white;
+}
+
+.logoLogs{
+	width: 4vw;
+	height: 4vw;
+	background-size: cover;
+	background-position: center;
+	
+}
+
 .left_side {
 	grid-column-start: 1;
 	grid-row-start: 2;
@@ -256,8 +275,8 @@
 }
 
 .folderIcon {
-	width: 8vw;
-	height: 8vw;
+	width: 5vw;
+	height: 5vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -268,6 +287,7 @@
 	margin-left: 1vw;
 	font-family: "Tahoma", sans-serif;
 	padding-left: 1vw;
+	/* background: red; */
 	/* margin-top: 1vw; */
 }
 
