--- a/Main/src/styles/styleFolder.css
+++ b/Main/src/styles/styleFolder.css
@@ -1,19 +1,51 @@
-.readme{
-    width: 80vw;
-    height: 80vh;
-    position: absolute;
-    background: white;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-    border: 6px solid #0a25c0;
+.readme {
+	width: 80vw;
+	height: 80vh;
+	position: absolute;
+	background: white;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	overflow: hidden;
+	border: 6px solid #0a25c0;
 }
 
-.readmeTitle{
-    height: 2vw;
-    width: 100%;
-    /* background: blue; */
+.Pdf {
+	width: 90vw;
+	height: 80vh;
+	position: absolute;
+	background: gray;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	overflow: hidden;
+	border: 6px solid #0a25c0;
+}
+
+.SpaceText {
+	height: 100%;
+	width: 60%;
+	background: white;
+	margin-left: auto;
+	margin-right: auto;
+	overflow-y: scroll;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: start;
+	padding: 1vw;
+}
+.SpaceText > p {
+	font-size: 1vw;
+	font-family: "Tahoma", sans-serif;
+
+	text-align: start;
+}
+
+.readmeTitle {
+	height: 2vw;
+	width: 100%;
+	/* background: blue; */
 	background: linear-gradient(
 		0deg,
 		#0a25c0,
@@ -23,115 +55,200 @@
 		#0a25c0,
 		#455fed
 	);
-    display: flex;
-    align-items: center;
-    color: white;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	color: white;
 	font-family: "Tahoma", sans-serif;
-    padding-left: 1vw;
-    font-size: 1vw;
+	padding-left: 1vw;
+	font-size: 1vw;
 }
 
-.IconFolderRedme{
-    width: 1.5vw;
-    height: 1.5vw;
+.closeIcon {
+	width: 1.5vw;
+	height: 1.5vw;
+	cursor: pointer;
+	/* margin-right: 1vw; */
 }
 
-
-.menuTextReadme{
-    background: #eeeddb;
-    width: 100%;
-    height: 2vw;
-    padding-top: .5vw;
-    padding-left: 1vw;
-    border-bottom: 1px solid rgb(175, 174, 174);
+.disable {
+	opacity: 0.5;
 }
 
-.menuTextReadme ul{
-    display: flex;
-    gap: 1vw;
+.closeIcons {
+	margin-right: 1vw;
+}
+
+.NameIcon {
+	width: 1.5vw;
+	height: 1.5vw;
+	display: flex;
+	align-items: center;
+}
+
+.IconFolderRedme {
+	width: 1.5vw;
+	height: 1.5vw;
+}
+
+.menuTextReadme {
+	background: #eeeddb;
+	width: 100%;
+	height: 2vw;
+	padding-top: 0.5vw;
+	padding-left: 1vw;
+	border-bottom: 1px solid rgb(175, 174, 174);
+}
+
+.menuTextReadme ul {
+	display: flex;
+	gap: 1vw;
 	font-family: "Tahoma", sans-serif;
 
-    /* justify-content: space-around; */
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: .9vw;
+	/* justify-content: space-around; */
+	align-items: center;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	font-size: 0.9vw;
 }
 
-.menuTextReadme ul li{
-    padding: .2vw;
-
+.menuTextReadme ul li {
+	padding: 0.2vw;
 }
 
-.menuTextReadme ul li:hover{
-    cursor: pointer;
-    background: rgba(158, 157, 157, 0.205);
+.menuTextReadme ul li:hover {
+	cursor: pointer;
+	background: rgba(158, 157, 157, 0.205);
 }
 
-
-.menuIconReadme{
-    width: 100%;
-    height: 5vw;
-    background: #eeeddb;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    font-size: 1vw;
+.menuIconReadme {
+	width: 100%;
+	height: 5vw;
+	background: #eeeddb;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	font-size: 1vw;
 	font-family: "Tahoma", sans-serif;
-    border: 1px solid rgb(175, 174, 174);
-
+	border: 1px solid rgb(175, 174, 174);
 }
 
-
-.backIcon{
-    width: 2.5vw;
-    height: 2.5vw;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    cursor: pointer;
+.backIcon {
+	width: 2.5vw;
+	height: 2.5vw;
+	margin-left: 1vw;
+	margin-right: 1vw;
+	cursor: pointer;
 }
 
-.otherSide{
-    transform: rotate(180deg);
+.otherSide {
+	transform: rotate(180deg);
 }
 
-.readmeSearch{
-    width: 100%;
-    height: 2vw;
-    background: #eeeddb;
-    border: 1px solid rgb(175, 174, 174);
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-left: 1vw;
-    color: rgb(150, 150, 150);
+.readmeSearch {
+	width: 100%;
+	height: 2vw;
+	background: #eeeddb;
+	border: 1px solid rgb(175, 174, 174);
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	padding-left: 1vw;
+	color: rgb(150, 150, 150);
+	font-size: 0.9vw;
 }
 
-.inputSearch{
-    height: 100%;
-    width: 100%;
+.inputSearch {
+	height: 100%;
+	width: 100%;
 	font-family: "Tahoma", sans-serif;
-    font-size: .9vw;
-    border: none;
-
+	font-size: 0.9vw;
+	border: none;
 }
 
-.divInput{
-    width: 80%;
-    height: 100%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    background: white;
-    margin-left: 1vw;
+.divInput {
+	width: 80%;
+	height: 100%;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	background: white;
+	margin-left: 1vw;
 }
 
-.backIconInput{
-    width: 1.5vw;
-    height: 1.5vw;
-    margin-left: 1vw;
-    cursor: pointer;
-    transform: rotate(180deg);
-    margin-right: .6vw;
+.backIconInput {
+	width: 1.5vw;
+	height: 1.5vw;
+	margin-left: 1vw;
+	cursor: pointer;
+	transform: rotate(180deg);
+	margin-right: 0.6vw;
+}
+
+.contentReadme {
+	width: 100%;
+	height: 100%;
+}
+
+.sideBarReadme {
+	width: 25%;
+	height: 100%;
+	background: #7aa0e6;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+}
+
+.places,
+.tasks {
+	width: 70%;
+	height: 10vw;
+	background: #d6e0f8;
+	margin-top: 1vw;
+	display: flex;
+	align-items: start;
+	/* justify-content: space-between; */
+	flex-direction: column;
+}
+
+.iconTasks {
+	font-size: 1vw;
+	text-align: start;
+	margin-left: 1vw;
+	margin-top: 0.6vw;
+	font-family: "Tahoma", sans-serif;
+	color: #305f98;
+	cursor: pointer;
+}
+.HeaderTasks {
+	width: 13.3vw;
+	height: 2vw;
+	background: #fffffdab;
+	color: #305f98;
+	font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: "Tahoma", sans-serif;
+	font-size: 1vw;
+}
+
+.Details {
+	margin-top: 1vw;
+}
+
+.filesReadme {
+	width: 80%;
+	height: 100%;
+	display: flex;
+}
+
+.contentReadme {
+	display: flex;
+}
+
+.NameFolderReadme {
+	color: black;
 }
