--- a/Main/src/styles/home.css
+++ b/Main/src/styles/home.css
@@ -19,6 +19,21 @@
 	width: 100%;
 }
 
+.widowsOpen{
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background: red;
+}
+
+.windwOpenIcon{
+	width: 10%;
+	height: 100%;
+	background: green;
+}
+
 .footerHome {
 	position: absolute;
 	bottom: 0;
