--- a/Main/src/styles/styleFolder.css
+++ b/Main/src/styles/styleFolder.css
@@ -10,17 +10,30 @@
 	border: 6px solid #0a25c0;
 }
 
+.about{
+	top: 0%;
+	left: 2%;
+}
+
 .Pdf {
-	width: 90vw;
+	width: 50vw;
 	height: 80vh;
 	position: absolute;
 	background: gray;
-	top: 50%;
+	
+	/* top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%); */
 	overflow: hidden;
 	border: 6px solid #0a25c0;
 }
+
+
+
+.works{
+	top: 0%;
+	right: 5%;
+} 
 
 .SpaceText {
 	height: 100%;
