--- a/Main/src/styles/home.css
+++ b/Main/src/styles/home.css
@@ -1,10 +1,13 @@
 .fullHome {
 	height: 100vh;
 	width: 100vw;
+	overflow: hidden;
 	background: url("../assets/images/background_windowsXp.jpg");
 	background-position: center;
 	background-size: cover;
 }
+ 
+ 
 
 .parent > div {
 	/* background: red; */
@@ -35,6 +38,7 @@
 }
 
 .footerHome {
+	z-index: 2;
 	position: absolute;
 	bottom: 0;
 	height: 4vw;
