--- a/Main/src/styles/styleFolder.css
+++ b/Main/src/styles/styleFolder.css
@@ -3,14 +3,14 @@
 	height: 80vh;
 	position: absolute;
 	background: white;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	top: 10%;
+	left: 4%;
 	overflow: hidden;
 	border: 6px solid #0a25c0;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.about{
+.about {
 	top: 0%;
 	left: 2%;
 }
@@ -20,20 +20,23 @@
 	height: 80vh;
 	position: absolute;
 	background: gray;
-	
+
 	/* top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%); */
-	overflow: hidden;
+	/* overflow: hidden; */
+	overflow-x: hidden;
+	overflow-y: hidden;
+	/* overflow-y: scroll; */
+	
 	border: 6px solid #0a25c0;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-
-.works{
+.works {
 	top: 0%;
 	right: 5%;
-} 
+}
 
 .SpaceText {
 	height: 100%;
@@ -47,6 +50,7 @@
 	justify-content: start;
 	align-items: start;
 	padding: 1vw;
+	/* padding-bottom: 14vw; */
 }
 .SpaceText > p {
 	font-size: 1vw;
@@ -264,4 +268,36 @@
 
 .NameFolderReadme {
 	color: black;
+}
+
+.MyWorksImg {
+	width: 15vw;
+	height: 15vw;
+}
+
+.NameProject {
+	font-size: 2.5vw;
+	font-family: "Tahoma", sans-serif;
+	color: black;
+}
+
+.MyWorks {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	/* font-weight: bold; */
+	font-family: "Tahoma", sans-serif;
+	text-align: start;
+	margin-bottom: 7vw;
+	/* align-items: start; */
+}
+
+.DescriptionProject {
+	margin-top: 1vw;
+	width: 80%;
+	font-size: 1.5vw;
+	font-family: "Tahoma", sans-serif;
+	color: black;
+	align-items: start;
 }
