--- a/Main/src/styles/styleCv.css
+++ b/Main/src/styles/styleCv.css
@@ -34,23 +34,26 @@
 	border-bottom: 0.2vw solid black;
 }
 
+.Education,
 .discription {
 	width: 90%;
 	display: flex;
 	flex-direction: column;
 	align-items: start;
-	padding-top: .2vw;
+	padding-top: 0.2vw;
 }
 
+.Education > p,
 .discription > p {
 	text-align: start;
 }
 
 .cvs {
+	margin-top: 4%;
 	padding-left: 5%;
 	padding-right: 5%;
 	overflow-y: scroll;
-	height: 100%;
+	height: 80%;
 	width: 60%;
 	background: white;
 	margin-left: auto;
@@ -61,3 +64,54 @@
 	justify-content: start;
 	align-items: start;
 }
+
+.footerCv {
+	height: 35vw;
+	width: 100%;
+	background: red;
+}
+
+
+.discription >strong, .Education >strong{
+    font-size: 1vw;
+    text-align: start;
+}
+
+
+.discription >p, .Education >p{
+    font-size: .8vw;
+}
+
+.Education >i{
+    font-size: .7vw;
+    text-align: start;
+
+}
+
+.cvs >ul>li{
+    text-align: start;
+    font-size: .8vw;
+
+}
+
+.buttonDownload{
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	right: 1%;
+	margin-top: 1%;
+	width: 6vw;
+	height: 3vw;
+	background: rgb(63, 62, 62);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	color: white;
+	font-size: 1vw;
+	font-weight: bold;
+	border: none;
+	border-radius: 1vw;
+	cursor: pointer;
+	
+}
+
