--- a/Main/src/styles/loading.css
+++ b/Main/src/styles/loading.css
@@ -72,3 +72,11 @@
 		transform: translateX(2000%);
 	}
 }
+
+
+@media screen and (max-width: 768px) {
+	.logo_windowsXp{
+		width: 38vh;
+		height: 33vh;
+	}
+}
