--- a/Main/src/styles/styleFolder.css
+++ b/Main/src/styles/styleFolder.css
@@ -307,6 +307,11 @@
 	align-items: start;
 }
 
+.DescriptionProject >p>i{
+	font-size: 1vw;
+	margin-left: 1vw;
+}
+
 @media screen and (max-width: 768px) {
 	.readme,
 	.Pdf {
