add FeddBack porfolio

--- a/Main/src/styles/home.css
+++ b/Main/src/styles/home.css
@@ -1,12 +1,48 @@
 .fullHome {
 	height: 100vh;
 	width: 100vw;
-	overflow: hidden;
+	/* overflow: hidden; */
 	background: url("../assets/images/background_windowsXp.jpg");
 	background-position: center;
 	background-size: cover;
 }
 
+.FullPost {
+	height: 45vw;
+	width: 32vw;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+}
+
+.closePost {
+	position: absolute;
+	top: 1%;
+	right: 1.5%;
+	font-size: 0.7vw;
+	cursor: pointer;
+	/* font-weight: bold; */
+	transition: 0.5s ease-in-out;
+}
+
+.closePost:hover {
+	transform: scale(1.4);
+	transition: 0.5s ease-in-out;
+	cursor: pointer;
+}
+
+.linkedinFeed {
+	height: 40vw;
+	width: 30vw;
+}
+
+.FeedbackPortfolio {
+	position: absolute;
+	bottom: 12vh;
+	right: 2vw;
+}
 .parent > div {
 	/* background: red; */
 }
@@ -185,8 +221,6 @@
 	cursor: pointer;
 }
 
- 
-
 .logoLogs {
 	width: 4vw;
 	height: 4vw;
@@ -331,6 +365,23 @@
 }
 
 @media screen and (max-width: 768px) {
+	.FullPost {
+		width: 70vw;
+		height: 70vw;
+	}
+
+	.linkedinFeed {
+		height: 67vw;
+		width: 67vw;
+	}
+
+	.closePost {
+		font-size: 2vw;
+	right: 6.5%;
+
+	}
+
+
 	.folderIcon {
 		height: 10vw;
 		width: 10vw;
