--- a/Main/src/styles/home.css
+++ b/Main/src/styles/home.css
@@ -75,7 +75,7 @@
 	z-index: 2;
 	position: absolute;
 	bottom: 0;
-	height: 4vw;
+	height: 3vw;
 	width: 100%;
 	background: linear-gradient(
 		0deg,
@@ -110,8 +110,8 @@
 .iconWindows {
 	width: 13%;
 	height: 100%;
-	border-top-right-radius: 40px;
-	border-bottom-right-radius: 40px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 	background: linear-gradient(
 		0deg,
 		rgb(8, 155, 8),
@@ -127,6 +127,7 @@
 	/* justify-content: center; */
 	align-items: center;
 	animation: windows 3s ease-in-out infinite;
+	font-size: 1em;
 }
 
 .dateMeteo {
@@ -181,7 +182,7 @@
 
 .fullLeftSIde {
 	position: absolute;
-	bottom: 4vw;
+	bottom: 3.1vw;
 	height: 40vw;
 	width: 40vw;
 	display: grid;
@@ -248,7 +249,9 @@
 	height: 4vw;
 	background: url("../assets/images/picture_Mouad.jpg");
 	background-size: cover;
-	background-position: start;
+  background-size: 135%;
+
+	background-position: center;
 	border-radius: 10%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
