--- a/Main/src/styles/logPage.css
+++ b/Main/src/styles/logPage.css
@@ -40,7 +40,7 @@
 	width: 30vw;
 	display: flex;
 	align-items: center;
-	font-size: 1.5vw;
+	font-size: 1.3vw;
 	border: none;
 	color: white;
 	margin-top: 1vw;
@@ -49,7 +49,7 @@
 }
 
 .pictureRestart {
-	height: 100%;
+	height: 80%;
 }
 
 .footerText {
@@ -96,16 +96,19 @@
 }
 
 .pictureUser_logPage {
-	height: 6vw;
-	width: 6vw;
-	background: url("../assets/images/picture_Mouad.jpg");
-	background-size: cover;
-	background-position: start;
-	margin-left: 2vw;
-	border: 2px white solid;
-	border-radius: 3px;
-	/* margin-top: -10%; */
+  height: 6vw;
+  width: 6vw;
+  background-image: url("../assets/images/picture_Mouad.jpg");
+  background-repeat: no-repeat;
+
+  background-size: 135%;
+  background-position: center;
+
+  margin-left: 2vw;
+  border: 2px solid white;
+  border-radius: 3px;
 }
+
 
 .nameUser_logPage {
 	font-size: 1.5vw;
